# motivator

./: .gitignore  README.md  motivateme.py  pyproject.toml
MotivateMe.egg-info/: PKG-INFO  SOURCES.txt
motivate/: me.py
motivate/MotivateMe.egg-info/: SOURCES.txt
src/: __init__.py
src/MotivateMe.egg-info/: PKG-INFO  top_level.txt
