[project]
name = "MotivateMe"
verson = "0.0.1"
authors = [
    {name="Jalen Merluza", email=Jalen.Merluza@cabelas.ca"}
]
description="Motivational Quote Generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/j-merluza/motivator"