[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MotivateMe"
version = "0.0.6"
license = {file="LICENSE"}
authors = [
    {name="Jalen Merluza", email="Jalen.Merluza@cabelas.ca"}
]
description="Motivational Quote Generator"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["motivate"]
include-package-data = true

[tool.setuptools.package-data]
"motivate" = ["*.json"]

[project.urls]
Homepage = "https://github.com/j-merluza/motivator"